--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+useful/
+plates/
+frames_video/
+video_plate_recognition.MOV
